IT WORKS IN THE FIRST TRY??????????? How? WHY?